--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Search</title>
+        <title>Search test</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div class="content-container">
+            <div class="nav-container"> 
+                <a class="nav-item"> Search </a>
+                <a class="nav-item"> Image </a>
+                <a class="nav-item"> Advanced </a>
+            </div>
+            <div class="form-container">
+                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png" class="google-img"/>
+                <form action="https://www.google.com/search" class="form">
+                    <input type="text" name="q" class="search-bar">
+                    <div class="button-container">
+                        <input type="submit" value="Google Search" class="button">
+                        <button class="button"> Im feeling Lucky </button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
