--- a/image.html
+++ b/image.html
@@ -10,16 +10,15 @@
     <body>
         <div class="content-container">
             <div class="nav-container"> 
-                <a class="nav-item" href="image.html"> Image </a>
-                <a class="nav-item" href="advanced.html"> Advanced </a>
+                <a class="nav-item" href="index.html"> Search </a>
             </div>
-            <div class="form-container"> 
+            <div class="form-container">
                 <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png" class="google-img" alt="google-logo"/>
-                <form action="https://www.google.com/search" class="form">
+                <p class="image-subtitle"> Image Search</p>
+                <form action="https://www.google.com/images" class="form">
                     <input type="text" name="q" class="search-bar">
                     <div class="button-container">
                         <input type="submit" value="Google Search" class="button">
-                        <button class="button"> Im feeling Lucky </button>
                     </div>
                 </form>
             </div>
