implementing the im feeling lucky button in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <input type="text" name="q" class="search-bar">
                     <div class="button-container">
                         <input type="submit" value="Google Search" class="button">
-                        <button class="button"> Im feeling Lucky </button>
+                        <input type="submit" value="I'm Feeling Lucky" name="btnI" class="button">
                     </div>
                 </form>
             </div>
